@@ -1,5 +1,13 @@
 2021-08-22 Philipp Klaus Krause <pkk AT spth.de>
 
+	* device/lib/pic16/libsdcc/float/fseq.c,
+	  device/lib/pic16/libsdcc/float/fsgt.c,
+	  device/lib/pic16/libsdcc/float/fslt.c,
+	  device/lib/pic16/libsdcc/float/fsneq.c:
+	  Fix bug #3274.
+
+2021-08-22 Philipp Klaus Krause <pkk AT spth.de>
+
 	* device/lib/ez80_z80/*.s,
 	  device/lib/tlcs90/*.s:
 	  Fix library functions for new calling convention.
